Add and delete persons
