# controller/dto.go
@@ -32,23 +32,42 @@ func tagsToTagsResponse(t []store.Tag) TagsResponse {
 	return TagsResponse{Tags: tags}
 }
 
+func personToPersonResponse(p store.Person) PersonResponse {
+	return PersonResponse{
+		ID:   p.ID,
+		Name: p.Name,
+	}
+}
+
+func dreamToDreamMetaResponse(d store.Dream) DreamMetaResponse {
+	return DreamMetaResponse{
+		ID:   d.ID,
+		Date: d.Date,
+	}
+}
+
 func dreamToDreamResponse(d store.Dream) DreamResponse {
+	var dreamMetaResponse DreamMetaResponse = dreamToDreamMetaResponse(d)
 	var tags []TagResponse = []TagResponse{}
 	for _, tag := range d.Tags {
 		tags = append(tags, tagToTagResponse(tag))
 	}
+	var persons []PersonResponse = []PersonResponse{}
+	for _, person := range d.Persons {
+		persons = append(persons, personToPersonResponse(person))
+	}
 	return DreamResponse{
-		ID:          d.ID,
-		Date:        d.Date,
-		Description: d.Description,
-		Tags:        tags,
+		DreamMetaResponse: dreamMetaResponse,
+		Description:       d.Description,
+		Tags:              tags,
+		Persons:           persons,
 	}
 }
 
 func dreamsToDreamsResponse(dreams []store.Dream) DreamsResponse {
-	var respList = []DreamResponse{}
+	var respList = []DreamMetaResponse{}
 	for _, d := range dreams {
-		dream := dreamToDreamResponse(d)
+		dream := dreamToDreamMetaResponse(d)
 		respList = append(respList, dream)
 	}
 	return DreamsResponse{Dreams: respList}
